# cpp_context_server

./: .dockerignore  .gitmodules  Dockerfile  go.mod  go.sum
cmd/: main.go
pkg/dot/: directed_graph.go  directed_graph_test.go  graph.go  graph_test.go  list_node.go  node.go  pointer.go
pkg/evaluation/: line_evaluator.go  line_evaluator_test.go
pkg/semantic/: ast.go  semantic.go  semantic_test.go
pkg/service/: CompilerService.go
pkg/visualization/: directed_graph.go  directed_graph_test.go  ops.go  visualizer.go  visualizer_test.go
runtime/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  runtime  runtime.cpp  runtime.hpp
tools/cpp_reflect/: CMakeLists.txt
tools/cpp_reflect/cmd/: CMakeLists.txt  ReflectAction.hpp  ReflectActionFactory.hpp  ReflectAstConsumer.hpp  ast.hpp  main.cpp
tools/cpp_reflect/test/: sample.cpp
